--- a/resume.css
+++ b/resume.css
@@ -38,7 +38,7 @@
   --sidebar-pos-top: 2rem;
   --sidebar-pos-left: 1rem;
   --sidebar-width: 30vw;
-  --header-height: 2.2rem;
+  --heading-height: 2.2rem;
 }
 
 html, body {
